--- a/index.html
+++ b/index.html
@@ -27,13 +27,6 @@
 
     <link rel="stylesheet" href="font-mfizz/font-mfizz.css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <body>
@@ -56,10 +49,10 @@
                 <a href="#services" onclick = $("#menu-close").click(); >Skills</a>
             </li>
             <li>
-                <a href="#portfolio" onclick = $("#menu-close").click(); >Portfolio</a>
+                <a href="#portfolio" onclick = $("#menu-close").click(); >My Projects</a>
             </li>
             <li>
-                <a href="#contact" onclick = $("#menu-close").click(); >Contact</a>
+                <a href="#contact" onclick = $("#menu-close").click(); >Contact Me</a>
             </li>
         </ul>
     </nav>
@@ -69,7 +62,6 @@
         <div class="text-vertical-center">
             <h1>Arjun Devarajan</h1>
             <br>
-            <a href="#about" class="btn btn-dark btn-lg">About Me</a>
         </div>
     </header>
 
@@ -80,8 +72,6 @@
                 <div class="col-lg-12 text-center">
                     <h2>I'm a second-year computer science and physics student at Duke University, and I'm trying to make life multiplanetary.</h2>
                     <p class="lead">My <a href="Arjun Devarajan Resume.pdf">résumé</a>, <a href="https://github.com/arjundevarajan">Github</a>, and <a href="https://www.linkedin.com/in/arjundevarajan">LinkedIn</a> can be found here.</p>
-                    
-                    <!-- <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p> -->
                 </div>
             </div>
             <!-- /.row -->
@@ -90,7 +80,6 @@
     </section>
 
     <!-- Services -->
-    <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
     <section id="services" class="services bg-primary">
         <div class="container">
             <div class="row text-center">
@@ -100,31 +89,26 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
-                                <span class="fa-stack 
-                                fa-4x">
-                                <!-- <i class="icon-python"></i> -->
+                                <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa icon-python fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>Python</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <!-- <a href="#" class="btn btn-light">Learn More</a> -->
+                                <p></p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <!-- <i class="icon-java-bold"></i> -->
                                 <i class="fa icon-java-bold fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>Java</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <!-- <a href="#" class="btn btn-light">Learn More</a> -->
+                                <p></p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -137,7 +121,6 @@
                                     <strong>Android</strong>
                                 </h4>
                                 <p>Experience developing Android applications for startups</p>
-                                <!-- <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -149,8 +132,7 @@
                                 <h4>
                                     <strong>Physics</strong>
                                 </h4>
-                                <p>Understanding and ability to apply basic mechanics and electromagnetism concepts</p>
-                                <!-- <a href="#" class="btn btn-light">Learn More</a> -->
+                                <p>Understanding and ability to apply basic mechanics and electromagnetism concepts to real-life situations</p>
                             </div>
                         </div>
                     </div>
@@ -162,13 +144,6 @@
         </div>
         <!-- /.container -->
     </section>
-
-    <!-- Callout -->
-<!--     <aside class="callout">
-        <div class="text-vertical-center">
-            <h1>Vertically Centered Text</h1>
-        </div>
-    </aside> -->
 
     <!-- Portfolio -->
     <section id="portfolio" class="portfolio">
@@ -178,67 +153,51 @@
                     <h2>My Projects</h2>
                     <hr class="small">
                     <div class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="http://bigdata.duke.edu/projects/solar-power-estimation">
+                                <a href="http://bigdata.duke.edu/projects/solar-power-estimation" target="_blank">
                                     <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="https://github.com/arjundevarajan/pacman">
+                                <a href="https://github.com/arjundevarajan/pacman" target="_blank">
                                     <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="#">
+                                <a href="http://devpost.com/software/diversity/" target="_blank">
                                     <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="portfolio-item">
-                                <a href="http://sifronb.com/hd/">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
                                 </a>
                             </div>
                         </div>
                     </div>
                      <div class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="http://bigdata.duke.edu/projects/solar-power-estimation">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="portfolio-item">
-                                <a href="https://github.com/arjundevarajan/pacman">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="portfolio-item">
-                                <a href="sifronb.com/hd/">
+                                <a href="https://www.youtube.com/watch?v=eG_B-fxM0EU&index=17&list=PL4e9AQVlcJTRtdn8JsbpnAgllJGfCqBhR" target="_blank">
                                     <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
                                 </a>
                             </div>
                         </div>
+                        <div class="col-md-4">
+                            <div class="portfolio-item">
+                                <a href="https://github.com/arjundevarajan/herecomesthesun" target="_blank">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-5.jpg">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="portfolio-item">
+                                <a href="http://www.inthecube.org/" target="_blank">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-6.jpg">
+                                </a>
+                            </div>
+                        </div>
                     </div>
-                    <!-- /.row (nested) -->
-                    <!-- <a href="#" class="btn btn-dark">View More Items</a> -->
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
@@ -246,29 +205,6 @@
         </div>
         <!-- /.container -->
     </section>
-
-    <!-- Call to Action -->
-<!--     <aside class="call-to-action bg-primary">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h3>The buttons below are impossible to resist.</h3>
-                    <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-                    <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
-                </div>
-            </div>
-        </div>
-    </aside> -->
-
-    <!-- Map -->
-<!--     <section id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
-        <br />
-        <small>
-            <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
-        </small>
-        </iframe>
-    </section> -->
 
     <!-- Footer -->
     <footer>
