--- a/index.html
+++ b/index.html
@@ -1,294 +1,97 @@
+<!-- Arjun Devarajan -->
+<!-- Started: October 3, 2015 -->
+<!-- Last Updated: March 7, 2016 -->
+<!-- My first website! -->
+
 <!DOCTYPE html>
-<html lang="en">
 
-<head>
+<html>
+	<head>
+		<title>Arjun Devarajan</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
+	<body>
+		<div class = "Header" id = "Header">
+			<h2>Arjun Devarajan</h2>
+			<img src="Me.jpg" height="250" width="250" alt="Picture of Me">
+			<p>Native of Cary, NC</p>
+		</div>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+		<div class = "Links">
+			<p>
+				More information can be found <a href="Arjun Devarajan Resume.pdf">here</a>. If you really find that interesting, I guess you could look <a href="https://www.linkedin.com/in/arjundevarajan">here</a>, <a href="https://twitter.com/ArjunDevarajan">here</a>, or even <a href="https://instagram.com/arjdevarj/">here</a> to find out more about me. 
+			</p>
 
-    <title>Arjun Devarajan</title>
+			<p>
+				I'm 19 years old and I still know pretty much nothing, but I'm doing everything I can to learn more and more. I'm a second-year computer science and physics student at the most hateable university in America (Coach K does a good job) and I'm trying to make life multiplanetary.
+			</p>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+			<p>
+				<a href="#Header">This</a> is a link to my name. <a href="Volyoome">This</a> is a link to a project I once worked on. <em class="paper">This</em> is how you emphasize words in <abbr title="HyperText Markup Language">HTML</abbr> (hover over HTML to see what it means). <q>There are two types of quotes in HTML</q>, <blockquote cite="Volyoome">q and blockquote</blockquote>
 
-    <!-- Custom CSS -->
-    <link href="css/stylish-portfolio.css" rel="stylesheet">
+				<!-- This is a form entry box and submit button: <textarea rows="10" cols="30">Type something to submit it.</textarea> <input type="submit" value="Pls click"> This is a radio: <input type="radio"> and this is a checkbox: <input type="checkbox">.  -->
+			</p>
 
-    <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+			<p>
+				Pick your favorite pet animal
+				<select>
+					<option>Dog</option>
+					<option>Cat</option>
+					<option>Fish</option>
+					<option value="best animal">Octopus</option>
+				</select>
+			</p>
 
-    <link rel="stylesheet" type="text/css" href="bower_components/fontawesome/css/font-awesome.css">
-    
-    <link rel="stylesheet" type="text/css" href="fa-snapchat.css">
+			<p></p>
 
-    <link rel="stylesheet" href="font-mfizz/font-mfizz.css">
+			<table>
+				<tr>
+					<td>Category</td>
+					<td>Me</td>
+					<td>My friend</td>
+				</tr>
+				<tr>
+					<td>Favorite movie</td>
+					<td>Inception</td>
+					<td>Not Inception</td>
+				</tr>
+				<tr>
+					<td>Favorite meal</td>
+					<td>Paneer</td>
+					<td>Not paneer</td>
+				</tr>
+				<tr>
+					<td>Favorite text editor</td>
+					<td>Sublime</td>
+					<td>Not sublime</td>
+				</tr>
+			</table>
+		</div>
 
-</head>
+		<div class="Interests">
+			<p>
+				Here are a few of the things I'm interested in learning about: 
+			</p>
+			<ul>
+				<!-- <li><a href="https://www.youtube.com/watch?v=IyuBylcPJi0">Artificial Intelligence</a></li>
+				<li><a href="https://www.youtube.com/watch?v=aThCr0PsyuA">Augmented Reality</a></li>
+				<li><a href="https://www.youtube.com/user/arjund98">Filmmaking</a></li>
+				<li><a href="Data+ Final Poster.pdf">Solar Energy</a></li>
+				<li><a href="https://www.youtube.com/watch?v=sNhhvQGsMEc">Space Exploration</a></li>
+				<li><a href="https://www.youtube.com/watch?v=s86-Z-CbaHA">Youtube Video Education</a></li> -->
+				<li>Artificial Intelligence</li>
+				<li>Augmented Reality</li>
+				<li>Filmmaking</li>
+				<li>Solar Energy</li>
+				<li>Space Exploration</li>
+				<li>Youtube Video Education</li>
+			</ul>
+		</div>
 
-<body>
-
-    <!-- Navigation -->
-    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
-    <nav id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-            <li class="sidebar-brand">
-                <a href="#top"  onclick = $("#menu-close").click(); ></a>
-            </li>
-            <li>
-                <a href="#top" onclick = $("#menu-close").click(); >Home</a>
-            </li>
-            <li>
-                <a href="#about" onclick = $("#menu-close").click(); >About</a>
-            </li>
-            <li>
-                <a href="#services" onclick = $("#menu-close").click(); >Skills</a>
-            </li>
-            <li>
-                <a href="#portfolio" onclick = $("#menu-close").click(); >My Projects</a>
-            </li>
-            <li>
-                <a href="#contact" onclick = $("#menu-close").click(); >Contact Me</a>
-            </li>
-        </ul>
-    </nav>
-
-    <!-- Header -->
-    <header id="top" class="header">
-        <div class="text-vertical-center">
-            <h1>Arjun Devarajan</h1>
-            <br>
-            <a href="#about" class="btn btn-dark btn-lg">Welcome!</a>
-        </div>
-    </header>
-
-    <!-- About -->
-    <section id="about" class="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Hi, I'm Arjun. I'm a second-year computer science and physics student at Duke University, and I'm trying to make life multiplanetary.</h2>
-                    <p class="lead">My <a href="Arjun Devarajan Resume.pdf" target="_blank" style= "text-decoration: none">résumé</a>, <a href="https://github.com/arjundevarajan" target="_blank" style= "text-decoration: none">Github</a>, and <a href="https://www.linkedin.com/in/arjundevarajan" target="_blank" style= "text-decoration: none">LinkedIn</a> can be found here.</p>
-                </div>
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-
-    <!-- Services -->
-    <section id="services" class="services bg-primary">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Skills</h2>
-                    <hr class="small">
-                    <div class="row">
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa icon-python fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Python</strong>
-                                </h4>
-                                <p>Knowledge of Python artificially intelligent search algorithm implementations</p>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa icon-java-bold fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Java</strong>
-                                </h4>
-                                <p>Understanding of object-oriented programming practices and various Java data structures and algorithms</p>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-android fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Android</strong>
-                                </h4>
-                                <p>Experience developing Android digital health applications for startups</p>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-rocket fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Physics</strong>
-                                </h4>
-                                <p>Ability to apply basic mechanics and electromagnetism concepts to real-life situations</p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /.row (nested) -->
-                </div>
-                <!-- /.col-lg-10 -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-
-    <!-- Portfolio -->
-    <section id="portfolio" class="portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>My Projects</h2>
-                    <hr class="small">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <a href="http://bigdata.duke.edu/projects/solar-power-estimation" target="_blank" style= "text-decoration: none">
-                                <div class="box" id="portfolio-1">
-                                    <div class="overlay">
-                                        <span class="plus">Solar Power Estimation through Remote Sensing</span>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-4">
-                            <a href="https://github.com/arjundevarajan/pacman" target="_blank" style= "text-decoration: none">
-                                <div class="box" id="portfolio-2">
-                                    <div class="overlay">
-                                        <span class="plus">Pacman Artificial Intelligence Search Project</span>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-4">
-                            <a href="http://devpost.com/software/diversity/" target="_blank" style= "text-decoration: none">
-                                <div class="box" id="portfolio-3">
-                                    <div class="overlay">
-                                        <span class="plus">EcoDiversity: HackDuke Fall 2015 Project</span>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <a href="https://www.youtube.com/watch?v=eG_B-fxM0EU&index=17&list=PL4e9AQVlcJTRtdn8JsbpnAgllJGfCqBhR" target="_blank" style= "text-decoration: none">
-                                <div class="box" id="portfolio-4">
-                                    <div class="overlay">
-                                        <span class="plus">Big History Project Film Competition</span>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-4">
-                            <a href="https://github.com/arjundevarajan/herecomesthesun" target="_blank" style= "text-decoration: none">
-                                <div class="box" id="portfolio-5">
-                                    <div class="overlay">
-                                        <span class="plus">Kaggle Machine Learning Competition</span>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-4">
-                            <a href="http://www.inthecube.org/" target="_blank" style= "text-decoration: none">
-                                <div class="box" id="portfolio-6">
-                                    <div class="overlay">
-                                        <span class="plus">Leader of The Cube: Duke's Student Incubator</span>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <!-- /.col-lg-10 -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <section id="contact" class="services bg-primary" div class="container">
-            <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Arjun Devarajan</strong>
-                    </h4>
-                    <p>205 Alexander Ave., Apartment Z<br>Durham, NC 27705</p>
-                    <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i>(919) 352-6525</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com" class="text">ard38@duke.edu</a>
-                        </li>
-                    </ul>
-                    <br>
-                    <ul class="list-inline">
-                        <li>
-                            <abbr title="@arjdevarj"><a href="https://instagram.com/arjdevarj/" target="_blank" style= "text-decoration: none"><i class="fa fa-instagram fa-fw fa-3x icon"></i></a></abbr>
-                        </li>
-                        <li>
-                            <abbr title="@arjundevarajan"><a href="https://twitter.com/ArjunDevarajan" target="_blank" style= "text-decoration: none"><i class="fa fa-twitter fa-fw fa-3x icon"></i></a></abbr>
-                        </li>
-                        <li>
-                            <abbr title="@arjdevarj"><i class="fa fa-snapchat fa-3x icon"></i></a></abbr>
-                        </li>
-                    </ul>
-                    <hr class="small">
-                    <p class="text-muted text">Copyright &copy; Arjun Devarajan 2016</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script>
-    // Closes the sidebar menu
-    $("#menu-close").click(function(e) {
-        e.preventDefault();
-        $("#sidebar-wrapper").toggleClass("active");
-    });
-
-    // Opens the sidebar menu
-    $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#sidebar-wrapper").toggleClass("active");
-    });
-
-    // Scrolls to the selected menu item on the page
-    $(function() {
-        $('a[href*=#]:not([href=#])').click(function() {
-            if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
-
-                var target = $(this.hash);
-                target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
-                if (target.length) {
-                    $('html,body').animate({
-                        scrollTop: target.offset().top
-                    }, 1000);
-                    return false;
-                }
-            }
-        });
-    });
-    </script>
-
-</body>
-
+		<div class = "Disclaimer">
+			<p>
+				DISCLAIMER: THIS WEBSITE IS CURRENTLY UNDER RECONSTRUCTION. 
+			</p>
+		</div>
+	</body>
 </html>
